--- a/client-vue/index.html
+++ b/client-vue/index.html
@@ -31,7 +31,7 @@
   <body id="page-top">
     <script>
       // This is called with the results from from FB.getLoginStatus().
-      function statusChangeCallback() {
+      function statusChangeCallback(response) {
         console.log('statusChangeCallback');
         console.log(response);
         // The response object is returned with a status field that lets the
@@ -40,39 +40,43 @@
         // for FB.getLoginStatus().
         if (response.status === 'connected') {
           // Logged into your app and Facebook.
-          // console.log('connecteueu',response.authResponse.accessToken);
-          axios.post('https://todoserver.lockonmaram.com/fblogin',{
-            token: response.authResponse.accessToken
+          axios.post('http://localhost:3000/fblogin',{},{
+            headers:{
+              token: response.authResponse.accessToken
+            }
           })
           .then(res=>{
-            console.log('res---->',res.data);
-            localStorage.setItem('authorization', res.data.token);
-            localStorage.setItem('id', res.data.userId);
-            localStorage.setItem('first_name', res.data.first_name);
-            localStorage.setItem('last_name', res.data.last_name);
-            window.location.assign('https://todo.lockonmaram.com')
+            console.log('res---->',res.data.data);
+            localStorage.clear()
+            localStorage.setItem('authorization', res.data.data.token);
+            localStorage.setItem('id', res.data.data.userId);
+            localStorage.setItem('first_name', res.data.data.first_name);
+            localStorage.setItem('last_name', res.data.data.last_name);
+            swal("Yeay", "You are logged in!", "success")
+            .then(result=>{
+              window.location.assign('http:///localhost:8080')
+            })
           })
           .catch(err=>{
             console.log(err);
           })
-          // testAPI();
         }
       }
 
       // This function is called when someone finishes with the Login
       // Button.  See the onlogin handler attached to it in the sample
       // code below.
-      // function checkLoginState() {
-      //   FB.getLoginStatus(function(response) {
-      //     statusChangeCallback(response);
-      //   });
-      // }
+      function checkLoginState() {
+        FB.getLoginStatus(function(response) {
+          statusChangeCallback(response);
+        });
+      }
 
       window.fbAsyncInit = function() {
         FB.init({
           appId      : '234985347350505',
           cookie     : true,  // enable cookies to allow the server to access
-          // the session
+                              // the session
           xfbml      : true,  // parse social plugins on this page
           version    : 'v2.8' // use graph api version 2.8
         });
@@ -89,9 +93,9 @@
         //
         // These three cases are handled in the callback function.
 
-        FB.getLoginStatus(function(response) {
-          statusChangeCallback(response);
-        });
+        // FB.getLoginStatus(function(response) {
+        //   statusChangeCallback(response);
+        // });
 
       };
 
@@ -105,16 +109,6 @@
       }(document, 'script', 'facebook-jssdk'));
 
       // Here we run a very simple test of the Graph API after login is
-      // successful.  See statusChangeCallback() for when this call is made.
-      function testAPI() {
-        console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', function(response) {
-          // console.log(response);
-          // console.log('Successful login for: ' + response.name);
-          // document.getElementById('status').innerHTML =
-          // 'Thanks for logging in, ' + response.name + '!';
-        });
-      }
     </script>
     <div id="app">
       <!-- Navigation -->
@@ -171,7 +165,7 @@
             <div class="col-lg-8 mx-auto">
               <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
               <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-              <div style="margin:0 auto;" class="fb-login-button" data-width="100" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" scope="public_profile,email" onlogin="statusChangeCallback();"></div>
+              <div style="margin:0 auto;" class="fb-login-button" data-width="100" data-max-rows="1" data-size="large" data-button-type="login_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false" scope="public_profile,email" onlogin="checkLoginState"></div>
               <form name="loginForm" id="login-form" novalidate="novalidate">
                 <div class="control-group">
                   <div class="form-group floating-label-form-group controls mb-0 pb-2">
@@ -264,23 +258,7 @@
             <tbody>
               <tr v-for="todo in todos">
                 <td>{{todo.task}}</td>
-                <td>{{ todo.priority }}
-                  <!-- <select class="form-control" id="priority-add" v-if="todo.priority == 'low'" v-model="newPrior" v-on:change="updatePrior(todo.id)">
-                    <option value="low" selected>Low</option>
-                    <option value="medium">Medium</option>
-                    <option value="high">High</option>
-                  </select>
-                  <select class="form-control" id="priority-add" v-if="todo.priority == 'medium'" v-model="newPrior" v-on:change="updatePrior(todo.id)">
-                    <option value="low">Low</option>
-                    <option value="medium" selected>Medium</option>
-                    <option value="high">High</option>
-                  </select>
-                  <select class="form-control" id="priority-add" v-if="todo.priority == 'high'" v-model="newPrior" v-on:change="updatePrior(todo.id)">
-                    <option value="low">Low</option>
-                    <option value="medium">Medium</option>
-                    <option value="high" selected>High</option>
-                  </select> -->
-                </td>
+                <td>{{ todo.priority }}</td>
                 <td v-if="todo.done === 'false'"><button type="button" class="btn btn-danger" v-on:click="notToDone(todo._id)">Not Done</button></td>
                 <td v-if="todo.done === 'true'"><button type="button" class="btn btn-primary" v-on:click="doneToNot(todo._id)">Done</button></td>
                 <td><button type="button" class="btn btn-info" v-on:click="tweetTask(todo)">Tweet</button></td>
