--- a/client-vue/index.html
+++ b/client-vue/index.html
@@ -22,7 +22,7 @@
     <link href="css/stylish-portfolio.min.css" rel="stylesheet">
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="./js/vue.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body id="page-top">
